--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,6 +5,17 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<link rel="icon" href="/icon.png" type="image/png" />
 		<title>Alberta Schools Explorer</title>
+		<link
+			rel="stylesheet"
+			href="https://unpkg.com/leaflet@1.9.2/dist/leaflet.css"
+			integrity="sha256-sA+zWATbFveLLNqWO2gtiw3HL/lh1giY/Inf1BJ0z14="
+			crossorigin=""
+		/>
+		<script
+			src="https://unpkg.com/leaflet@1.9.2/dist/leaflet.js"
+			integrity="sha256-o9N1jGDZrf5tS+Ft4gbIK7mYMipq9lqpVJ91xHSyKhg="
+			crossorigin=""
+		></script>
 	</head>
 	<body>
 		<div id="root"></div>
